--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,12 +1,14 @@
 buildscript {
-    ext.kotlin_version = '1.7.10'
+    ext.kotlin_version = '1.9.10'
     repositories {
         google()
         mavenCentral()
     }
 
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:7.3.1' // downloads 1.7.1 Metadata
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" 
+        classpath 'com.google.gms:google-services:4.3.15'
     }
 }
 
